--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -75,3 +75,13 @@ button{
     height: 30px;
     background-color: yellow;
 }
+
+#flush_success{
+    width: 100%;
+    padding-top: 28px;
+    padding-left: 2%;
+    padding-bottom: 28px;
+    margin-bottom: 15px;
+    color: #155724;
+    background-color: #d4edda;
+}
